# starspring

./: .gitignore  .pdmignore  DATABASE_GUIDE.md  README.md  RELEASE_NOTES_v0.2.0.md  pyproject.toml
examples/example1/: application.yaml  controller.py  entity.py  main.py  pyproject.toml  repository.py  service.py
examples/example2/: application.yaml  controller.py  entity.py  main.py  pyproject.toml  repository.py  service.py
examples/example2/templates/: layout.html
examples/example2/templates/users/: all-users.html  edit-user.html
examples/example3/: application.yaml  main.py  pyproject.toml
examples/example3/controllers/: __init__.py  admin_controller.py  auth_controller.py
examples/example3/entities/: __init__.py  user.py
examples/example3/repository/: user_repository.py
examples/example3/services/: user_service.py
examples/example3/templates/: dashboard.html  home.html  index.html  layout.html
examples/example3/templates/admin/: users.html
examples/example3/templates/auth/: login.html  register.html
examples/example3/templates/users/: create-user.html
starspring/: __init__.py  application.py  pyproject.toml
starspring/client/: __init__.py  rest_client.py
starspring/config/: __init__.py  environment.py  properties.py
starspring/core/: context.py  controller.py  exceptions.py  response.py
starspring/data/: __init__.py  database_config.py  entity.py  orm_gateway.py  query_builder.py  repository.py  schema_generator.py  transaction.py
starspring/decorators/: __init__.py  components.py  configuration.py  routing.py  validation.py
starspring/middleware/: cors.py  exception.py  logging.py
starspring/template/: __init__.py  engine.py  model_and_view.py
tests/: test_auto_tables.py  test_blog_app.py  test_blog_with_db.py  test_count_optimization.py  test_crud.py  test_debug_entities.py  test_framework.py  test_minimal_save.py  test_orm_gateway.py  test_output.txt  test_path_params.py  test_repository_fix.py  test_simple_save.py
