[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "starspring"
dynamic = ["version"]
description = "A Spring Boot-inspired Python web framework built on Starlette, combining the elegance of Spring's dependency injection with Python's simplicity"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "Dasun Nethsara", email = "techsaralk.pro@gmail.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
]
keywords = [
    "web",
    "framework",
    "starlette",
    "spring-boot",
    "dependency-injection",
    "orm",
    "rest-api",
    "template-engine",
    "async",
    "asgi",
]
dependencies = [
    "starlette>=0.40.0,<1.0.0",
    "pydantic>=2.7.0",
    "typing-extensions>=4.8.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.18",
    "pyyaml>=6.0",
    "httpx>=0.24.0",
    "uvicorn>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/DasunNethsara-04/starspring"
Documentation = "https://github.com/DasunNethsara-04/starspring/wiki"
Repository = "https://github.com/DasunNethsara-04/starspring"
Issues = "https://github.com/DasunNethsara-04/starspring/issues"
Changelog = "https://github.com/DasunNethsara-04/starspring/releases"

[project.optional-dependencies]
# Standard installation with all common dependencies
standard = [
    # For the test client
    "httpx>=0.23.0,<1.0.0",
    # For templates
    "jinja2>=3.1.5",
    # For forms and file uploads
    "python-multipart>=0.0.18",
    # Uvicorn with uvloop
    "uvicorn[standard]>=0.12.0",
    # Settings management
    "pydantic-settings>=2.0.0",
    # Extra Pydantic data types
    "pydantic-extra-types>=2.0.0",
    # Email validation
    "email-validator>=2.0.0",
]

# All optional features
all = [
    # For the test client
    "httpx>=0.23.0,<1.0.0",
    # For templates
    "jinja2>=3.1.5",
    # For forms and file uploads
    "python-multipart>=0.0.18",
    # For session middleware
    "itsdangerous>=1.1.0",
    # YAML support
    "pyyaml>=6.0",
    # For UJSONResponse
    "ujson>=5.8.0",
    # For ORJSONResponse
    "orjson>=3.9.3",
    # Email validation
    "email-validator>=2.0.0",
    # Uvicorn with uvloop
    "uvicorn[standard]>=0.12.0",
    # Settings management
    "pydantic-settings>=2.0.0",
    # Extra Pydantic data types
    "pydantic-extra-types>=2.0.0",
    # Database drivers
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",
]

# Database drivers
postgres = [
    "asyncpg>=0.29.0",
]
mysql = [
    "aiomysql>=0.2.0",
]
sqlite = [
    "aiosqlite>=0.19.0",
]

[dependency-groups]
dev = [
    { include-group = "tests" },
    { include-group = "docs" },
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
tests = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "coverage[toml]>=6.5.0,<8.0",
    "httpx>=0.23.0,<1.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=23.7.0",
]

[tool.pdm]
version = { source = "file", path = "starspring/__init__.py" }
distribution = true

[tool.pdm.build]
includes = [
    "starspring/",
]
excludes = [
    "**/.venv/",
    "**/venv/",
    "**/__pycache__/",
    "**/*.pyc",
    "**/*.pyo",
    "**/.git/",
    "**/.gitignore",
    "**/.python-version",
    "**/uv.lock",
    "**/pyproject.toml",
    "examples/",
    "tests/",
    "docs/",
]
source-includes = [
    "tests/",
    "examples/",
    "docs/",
    "LICENSE",
    "README.md",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "starspring.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "-v",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]

[tool.coverage.run]
source = ["starspring"]
omit = [
    "tests/*",
    "examples/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/*" = ["F401", "E402"]

[tool.ruff.lint.isort]
known-third-party = ["starlette", "pydantic", "sqlalchemy", "jinja2"]
known-first-party = ["starspring"]

[tool.uv.workspace]
members = [
    "examples/example2",
]
